Fix social media alignment

--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -31,7 +31,7 @@ footer {
   .social-media-container {
     flex-direction: row;
     // width: 80vw;
-    text-align: right;
+    text-align: center;
   }
 }
 
